<resources>

    <!-- Base application theme. -->
    <string name="app_name">Everguard</string>
    <string name="everguard">Everguard</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Registration -->
    <string name="everguard_logo">Everguard logo</string>
    <string name="welcome">Welcome!</string>
    <string name="tagline">Their safety starts here, let\'s take the first step.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions"><![CDATA[I agree to the Terms and Conditions]]></string>
    <string name="get_started">Get Started</string>
    <string name="Login_option">Already have an account?</string>

    <!-- Profile -->
    <string name="back_arrow">Back Arrow</string>
    <string name="sample_email">user123@gmail.com</string>
    <string name="sample_user">Hello, User!</string>
    <string name="sample_password">userpass123</string>
    <string name="sample_pfp">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="hello_user">Hello, %1$s!</string>
    <string name="recipient_profile">Recipient Profile</string>
    <string name="recipient_fname">First Name</string>
    <string name="recipient_lname">Last Name</string>

    <!-- Login -->
    <string name="welcome_login">Welcome Back!</string>
    <string name="tagline_login">Let\'s continue caring for what matters most.</string>
    <string name="sign_in_button">Sign-in</string>
    <string name="register_option">Don\'t have an account?</string>
    <string name="remember_me"><![CDATA[Remember me]]></string>
    <string name="forgot_passwd">Forgot password?</string>

    <!-- Forgot Password & Register Authentication-->
    <string name="forgot_pwd_title">Forgot Password</string>
    <string name="reg_auth_title">Verify your account!</string>
    <string name="tagline_forgot_pwd">Enter your email to reset your password.</string>
    <string name="tagline_reg_auth">A verification link has been sent to your email.</string>
    <string name="tagline_resend">No verification email? Resend email.</string>
    <string name="back_button">Back</string>
    <string name="submit_button">Submit</string>
    <string name="proceed_button">Proceed</string>
    <string name="resend_button">Resend</string>

    <!-- User Details -->
    <string name="setup_title">Let’s Get You Setup!</string>
    <string name="setup_subtitle">Please enter the details of the person you’re caring for</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <!-- Edit Profile and Recipient Profile -->
    <string name="new_username">New Username</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="new_recipient_fname">New First Name</string>
    <string name="new_recipient_lname">New Last Name</string>
    <string name="new_mobile_number">New Mobile Number</string>
    <string name="new_relationship">New Relationship</string>
    <string name="update">Update</string>

    <!-- Emergency Contacts -->
    <string name="emergency_contacts_title">Emergency Contacts</string>
    <string name="emergency_contacts_subtitle">This helps us quickly notify the right people when it matters most.</string>
    <string name="relationship_hint">Relationship</string>

    <!-- Device Pairing -->
    <string name="device_pair_title">Device Pair</string>
    <string name="device_pair_subtitle">Pair your Everguard device for secure, reliable monitoring</string>
    <string name="device_id_hint">Device Identification Number</string>
    <string name="verify">Verify</string>

    <!-- Home Notifications Contacts -->
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="contacts">Contacts</string>
    <string name="menu">Menu</string>
    <string name="logout">Logout</string>
    <string name="user_profile">User Profile</string>
    <string name="device_status">Device Status:</string>
    <string name="status">Connected</string>
    <string name="battery">100%</string>
    <string name="recent_alert">Recent Alert</string>
    <string name="alert_description">A fall has been detected!</string>
    <string name="alert_time_30m">30 mins ago</string>
    <string name="accident_alert">Accident Alert</string>
    <string name="recipient">Recipient</string>
    <string name="recipient_name">Juan Dela Cruz</string>
    <string name="age">Age:</string>
    <string name="recipient_age">67</string>
    <string name="device_settings">DEVICE SETTINGS</string>
    <string name="sensitivity_label">Detection Sensitivity</string>
    <string name="test_alert">Test Alert</string>
    <string name="device_alert">Device Alert</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="call">Call</string>
    <string name="send_sms">Send SMS</string>
    <string name="or">or</string>
    <string name="sample_message">A fall has been detected by the device. An alert is sent to notify emergency contacts. Please check on the user and provide assistance if needed.</string>
    <string name="sample_location">google.maps.com/latx.laty</string>
    <string name="sensitivity_description">Detection sensitivity level</string>

    <string name="add_contact">Add Contact</string>
    <string name="update_contact">Update Contact</string>
    <string name="sample_contact1_name">Sheann Roxas</string>
    <string name="sample_contact2_name">Kenneth Bulos</string>
    <string name="relationship_guardian">Guardian</string>
    <string name="relationship_caretaker">Caretaker</string>
    <string name="sample_contact1_number">09606 814 352</string>
    <string name="sample_contact2_number">0967 676 767</string>
    <string name="sample_counter">2/3</string>

    <string name="SOS_alert">SOS Alert</string>
    <string name="low_battery">Low Battery Alert</string>
    <string name="SOS_message">Juan Dela Cruz needs immediate help!</string>
    <string name="low_battery_message">The device only has 20% charge left!</string>
    <string name="alert_time_1d">1 day ago</string>
    <string name="alert_time_5d">5 days ago</string>
    <string name="alert_time_1h">1 hour ago</string>
    <string name="alert_time_3h">3 hours ago</string>
    <string name="add">Add</string>

    <string name="terms_title">Everguard Terms and Conditions</string>
    <string name="back_register">Back to Register</string>

</resources>
