<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:importantForAccessibility="no"
            android:src="@drawable/reg_designtop" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/everguard_logo"
                android:src="@drawable/blue_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/everguard"
                android:textColor="#014D85"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome"
            android:textColor="#014D85"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="11dp"
                android:textSize="17sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="11dp"
                android:textSize="17sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="11dp"
                android:textSize="17sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="11dp"
                android:textSize="17sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/terms_and_conditions_checkbox"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/registration_btn"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#014C84"
            android:padding="10dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Login_option"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <ImageView
            android:layout_width="173dp"
            android:layout_height="100dp"
            android:layout_gravity="end"
            android:importantForAccessibility="no"
            android:src="@drawable/reg_designbottom" />

    </LinearLayout>

</RelativeLayout>