<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_gravity="start"
            android:importantForAccessibility="no"
            android:src="@drawable/design_top" />

        <ImageView
            android:layout_width="267dp"
            android:layout_height="178dp"
            android:layout_gravity="center_horizontal"
            android:importantForAccessibility="no"
            android:src="@drawable/login_design" />

        <TextView
            style="@style/TextAppearance.Everguard.Title.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login"
            android:textSize="40sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline_login"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="9dp"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="9dp"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            >

            <CheckBox
                android:id="@+id/terms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/forgot_password_btn"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingTop="13dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/forgot_passwd"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <Button
            android:id="@+id/signin_btn"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/sign_in_button"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/register_option"
            android:clickable="true"
            android:textColor="@color/light_gray"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="173dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:importantForAccessibility="no"
        android:src="@drawable/design_bottom" />

</RelativeLayout>